--- a/connect/Dockerfile
+++ b/connect/Dockerfile
@@ -1,11 +1,9 @@
-ARG KAFKA_RELEASE=3.2.0
-FROM quay.io/strimzi/kafka:latest-kafka-${KAFKA_RELEASE}
+FROM confluentinc/cp-kafka-connect:7.2.2 as cp
+RUN confluent-hub install --no-prompt debezium/debezium-connector-postgresql:1.9.6
+RUN confluent-hub install --no-prompt confluentinc/kafka-connect-avro-converter:7.2.2
 
-ARG DEBEZIUM_RELEASE=1.9.4.Final
+FROM quay.io/strimzi/kafka:latest-kafka-3.2.0
 ENV KAFKA_CONNECT_PLUGIN_PATH=/home/kafka/connect-plugins
-
-RUN mkdir $KAFKA_CONNECT_PLUGIN_PATH
-RUN cd $KAFKA_CONNECT_PLUGIN_PATH && \
-    curl -sfSL https://repo1.maven.org/maven2/io/debezium/debezium-connector-postgres/${DEBEZIUM_RELEASE}/debezium-connector-postgres-${DEBEZIUM_RELEASE}-plugin.tar.gz | tar xz
-RUN cd $KAFKA_CONNECT_PLUGIN_PATH && \
-    curl -sfSL https://repo1.maven.org/maven2/io/debezium/debezium-connector-mysql/${DEBEZIUM_RELEASE}/debezium-connector-mysql-${DEBEZIUM_RELEASE}-plugin.tar.gz | tar xz
+RUN mkdir -p $KAFKA_CONNECT_PLUGIN_PATH
+COPY --from=cp /usr/share/confluent-hub-components/debezium-debezium-connector-postgresql/lib ${KAFKA_CONNECT_PLUGIN_PATH}/postgresql/
+COPY --from=cp /usr/share/confluent-hub-components/confluentinc-kafka-connect-avro-converter/lib ${KAFKA_CONNECT_PLUGIN_PATH}/avro/
