Add Schema Registry deployment

--- a/charts/dataplane/templates/metabase/deployment.yaml
+++ b/charts/dataplane/templates/metabase/deployment.yaml
@@ -1,4 +1,5 @@
 {{- $svcPort := .Values.metabase.service.port -}}
+{{- $hostname := required "metabase ingress hostname is required" .Values.metabase.ingress.hostName }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -10,7 +11,7 @@ spec:
   replicas: {{ .Values.metabase.replicaCount }}
   selector:
     matchLabels:
-      {{- include "dataplane.selectorLabels" . | nindent 6 }}
+      {{- include "dataplane.metabase.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.metabase.podAnnotations }}
