--- a/charts/dataplane/templates/strimzi/connect.yml
+++ b/charts/dataplane/templates/strimzi/connect.yml
@@ -1,4 +1,6 @@
 {{- $pgSecret := required "kafka postgres cdc secret name is required" .Values.strimzi.connect.secret }}
+{{- $registryName := include "dataplane.registry.fullname" . -}}
+{{- $registryPort := .Values.registry.service.port -}}
 ---
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnect
@@ -19,6 +21,10 @@ spec:
   config:
     config.providers: env
     config.providers.env.class: io.strimzi.kafka.EnvVarConfigProvider
+    key.converter: io.confluent.connect.avro.AvroConverter
+    key.converter.schema.registry.url: http://$registryName:$registryPort
+    value.converter: io.confluent.connect.avro.AvroConverter
+    value.converter.schema.registry.url: http://$registryName:$registryPort
   {{- with .Values.strimzi.connect.config }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
