--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -109,6 +109,7 @@
         chart_ref: "{{ dataplane_path }}/charts/dataplane"
         release_namespace: "{{ dataplane_namespace }}"
         create_namespace: true
+        force: true
         wait: true
         timeout: 20m
         kubeconfig: "{{ k8s_kubeconfig }}"
