--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -36,9 +36,9 @@ strimzi:
     replicas: 3
     config:
       group.id: connect-cluster
-      offset.storage.topic: connect-cluster-offsets
-      config.storage.topic: connect-cluster-configs
-      status.storage.topic: connect-cluster-status
+      offset.storage.topic: connect.cluster.offsets
+      config.storage.topic: connect.cluster.configs
+      status.storage.topic: connect.cluster.status
       config.storage.replication.factor: 2
       offset.storage.replication.factor: 2
       status.storage.replication.factor: 2
