--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -22,9 +22,9 @@ spec:
     database.dbname: "{{ $db.dbname }}"
     tasks.max: "1"
     key.converter: io.confluent.connect.avro.AvroConverter
-    key.converter.schema.registry.url: http://$registryName:$registryPort
+    key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     value.converter: io.confluent.connect.avro.AvroConverter
-    value.converter.schema.registry.url: http://$registryName:$registryPort
+    value.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     transforms: Reroute
     transforms.Reroute.type: io.debezium.transforms.ByLogicalTableRouter
     transforms.Reroute.topic.regex: (.*)
