--- a/charts/dataplane/templates/strimzi/connector.yaml
+++ b/charts/dataplane/templates/strimzi/connector.yaml
@@ -16,8 +16,8 @@ spec:
   config:
     database.hostname: {{ $db.hostname }}
     database.port: "{{ $db.port | default 5432 }}"
-    database.user: "${env:POSTGRES_USER}"
-    database.password: "${env:POSTGRES_PASS}"
+    database.user: "${env:POSTGRES_CDC_USER}"
+    database.password: "${env:POSTGRES_CDC_PASS}"
     database.server.name: "{{ $db.servername }}"
     database.dbname: "{{ $db.dbname }}"
     tasks.max: "1"
@@ -25,8 +25,36 @@ spec:
     key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
     value.converter: io.confluent.connect.avro.AvroConverter
     value.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
-    transforms: Reroute
-    transforms.Reroute.type: io.debezium.transforms.ByLogicalTableRouter
-    transforms.Reroute.topic.regex: (.*)
-    transforms.Reroute.topic.replacement: cdc.$1
+    transforms: reroute
+    transforms.reroute.type: io.debezium.transforms.ByLogicalTableRouter
+    transforms.reroute.topic.regex: (.*)
+    transforms.reroute.topic.replacement: cdc.$1
 {{- end }}
+---
+apiVersion: kafka.strimzi.io/v1beta2
+kind: KafkaConnector
+metadata:
+  name: {{ $fullName }}-warehouse-sink
+  labels:
+    strimzi.io/cluster: {{ $fullName }}
+spec:
+  class: io.confluent.connect.jdbc.JdbcSinkConnector
+  tasksMax: 1
+  config:
+    connection.url: jdbc:postgresql://{{ include "dataplane.warehouse.cluster" . }}:5432/{{ include "dataplane.warehouse.db" . }}
+    connection.user: "${env:POSTGRES_DW_USER}"
+    connection.password: "${env:POSTGRES_DW_PASS}"
+    tasks.max: "1"
+    topics.regex: "cdc.(.*)"
+    auto.create: true
+    key.converter: io.confluent.connect.avro.AvroConverter
+    key.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    value.converter: io.confluent.connect.avro.AvroConverter
+    value.converter.schema.registry.url: http://{{ $registryName }}:{{ $registryPort }}
+    transforms: "unwrap,rename"
+    transforms.unwrap.type: io.debezium.transforms.ExtractNewRecordState
+    transforms.unwrap.drop.tombstones: false
+    transforms.unwrap.delete.handling.mode: rewrite
+    transforms.rename.type: org.apache.kafka.connect.transforms.RegexRouter
+    transforms.rename.regex: "^cdc\\.(.*)\\.(.*)\\.(.*)"
+    transforms.rename.replacement: "$1_$3"
