--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -1,19 +1,26 @@
 ---
-name: Keepalive
+name: keepalive
 
 on:
   schedule:
     - cron: "55 23 * * 4"
 
 jobs:
+
   keepalive:
+
     name: Github Actions keepalive
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/keepalive-workflow@master
+
+      - name: check out the codebase
+        uses: actions/checkout@v2
+
+      - name: add keepalive commit
+        uses: gautamkrishnar/keepalive-workflow@master
         with:
-          commit_message: "CI Keepalive"
+          commit_message: "Add CI Keepalive Commit"
           committer_username: "Ted Cook"
           committer_email: "Ted Cook@example.com"
           auto_push: true
