Add init container scaffold

--- a/dataplane/Dockerfile
+++ b/dataplane/Dockerfile
@@ -8,10 +8,11 @@ ENV POETRY_VIRTUALENVS_IN_PROJECT=true
 ENV PATH="$POETRY_HOME/bin:$PATH"
 RUN python -c 'from urllib.request import urlopen; print(urlopen("https://install.python-poetry.org").read().decode())' | python -
 COPY . ./
-RUN poetry install --no-interaction --no-ansi --without dev -vvv
+RUN poetry self add poetry-plugin-bundle
+RUN poetry bundle venv /app/bundle --clear
 
 FROM python as runtime
-ENV PATH="/app/.venv/bin:$PATH"
-COPY --from=poetry /app/dataplane /app
+ENV PYTHONPATH="/app/bundle/python3.x/site-packages:${PYTHONPATH}"
+COPY --from=poetry /app/bundle /app/bundle
 WORKDIR /app
-CMD "cli.py"
+ENTRYPOINT ["/app/bundle/bin/dataplane"]
