--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -113,26 +113,19 @@
           )
         }}"
 
-    - name: query warehouse tables
+    - name: verify warehouse tables
       community.postgresql.postgresql_query:
         db: warehouse
         query: "SELECT table_name FROM information_schema.tables WHERE table_schema='public' AND table_type='BASE TABLE'"
         login_user: "{{ warehouse_user }}"
         login_password: "{{ warehouse_pass }}"
         login_host: "{{ warehouse_host }}"
-      register: warehouse_table_query
-
-    - name: record warehouse table names
-      ansible.builtin.set_fact:
-        warehouse_tables_present: "{{ warehouse_table_query.query_result | map(attribute='table_name') | sort }}"
-        warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') }}"
-
-    - name: verify warehouse table names
-      ansible.builtin.fail:
-        msg: "warehouse tables [{{ warehouse_tables_missing | join(',') }}] missing"
       vars:
-        warehouse_tables_missing: "{{ warehouse_tables_expected | difference(warehouse_tables_present) }}"
-      when: warehouse_tables_missing | length > 0
+        warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') }}"
+      register: warehouse_table_query
+      failed_when: warehouse_table_query.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
+      retries: 10
+      delay: 30
 
     - name: record warehouse table fields
       ansible.builtin.set_fact:
@@ -151,6 +144,8 @@
         login_user: "{{ warehouse_user }}"
         login_password: "{{ warehouse_pass }}"
         login_host: "{{ warehouse_host }}"
+      vars:
+        warehouse_tables_present: "{{ warehouse_table_query.query_result | map(attribute='table_name') | sort }}"
       loop: "{{ warehouse_tables_present }}"
       register: warehouse_data_query
 
