--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -122,8 +122,8 @@
         login_host: "{{ warehouse_host }}"
       vars:
         warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') }}"
-      register: warehouse_table_query
-      failed_when: warehouse_table_query.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
+      register: warehouse_table_check
+      failed_when: warehouse_table_check.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
       retries: 10
       delay: 30
 
@@ -142,6 +142,12 @@
     - name: record warehouse table data
       ansible.builtin.set_fact:
         warehouse_data: "{{ warehouse_data_query.results | list_to_dict('item') }}"
+
+    - debug:
+        var: warehouse_table_query
+
+    - debug:
+        var: warehouse_data_query
 
     - name: verify warehouse table data
       ansible.builtin.fail:
