--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -122,8 +122,8 @@
         login_host: "{{ warehouse_host }}"
       vars:
         warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') }}"
-      register: warehouse_table_data
-      failed_when: warehouse_table_data.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
+      register: warehouse_table_query
+      failed_when: warehouse_table_query.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
       retries: 10
       delay: 30
 
