--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -132,3 +132,10 @@ registry:
   tolerations: []
 
   affinity: {}
+
+busybox:
+
+  image:
+    repository: busybox
+    pullPolicy: IfNotPresent
+    tag: "1.35.0"
