--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -66,7 +66,7 @@
 
     - name: record source table data
       ansible.builtin.set_fact:
-        source_tables: "{{ source_table_query.query_result | map(attribute='table_name') | sort }}"
+        source_tables: "{{ source_table_query.query_result | map(attribute='table_name') | list }}"
 
     - name: query source table data
       community.postgresql.postgresql_query:
@@ -121,7 +121,7 @@
         login_password: "{{ warehouse_pass }}"
         login_host: "{{ warehouse_host }}"
       vars:
-        warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') }}"
+        warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') | list }}"
       register: warehouse_table_query
       failed_when: warehouse_table_query.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
       retries: 10
@@ -144,10 +144,10 @@
         warehouse_data: "{{ warehouse_data_query.results | list_to_dict('item') }}"
 
     - debug:
-        var: warehouse_table_query
+        msg: "{{ warehouse_table_query.query_result }}"
 
     - debug:
-        var: warehouse_data_query
+        msg: "{{ warehouse_data_query }}"
 
     - name: verify warehouse table data
       ansible.builtin.fail:
