Add pullpolicy to registry init container

--- a/charts/dataplane/templates/registry/deployment.yml
+++ b/charts/dataplane/templates/registry/deployment.yml
@@ -60,6 +60,7 @@ spec:
       initContainers:
         - name: registry-init
           image: {{ .Values.busybox.image.repository }}:{{ .Values.busybox.image.tag }}
+          imagePullPolicy: {{ .Values.busybox.image.pullPolicy }}
           command:
             - "sh"
             - "-c"
