--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -122,10 +122,11 @@
         login_host: "{{ warehouse_host }}"
       vars:
         warehouse_tables_expected: "{{ source_tables | map('map_format', 'pagila_%s') | list }}"
+        warehouse_tables_found: "{{ warehouse_table_query.query_result | map(attribute='table_name') | list }}"
       register: warehouse_table_query
-      failed_when: warehouse_table_query.query_result | map(attribute='table_name') | difference(warehouse_tables_expected) | length > 0
-      retries: 10
+      retries: 20
       delay: 30
+      until: warehouse_tables_expected | difference(warehouse_tables_found) | length == 0
 
     - name: query warehouse table data
       community.postgresql.postgresql_query:
@@ -142,12 +143,6 @@
     - name: record warehouse table data
       ansible.builtin.set_fact:
         warehouse_data: "{{ warehouse_data_query.results | list_to_dict('item') }}"
-
-    - debug:
-        msg: "{{ warehouse_table_query.query_result }}"
-
-    - debug:
-        msg: "{{ warehouse_data_query }}"
 
     - name: verify warehouse table data
       ansible.builtin.fail:
