--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -46,6 +46,12 @@ jobs:
       - name: check out the codebase.
         uses: actions/checkout@v2
 
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+
       - name: install kubectl
         uses: azure/setup-kubectl@v3
 
