--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -128,6 +128,10 @@
       delay: 30
       until: warehouse_tables_expected | difference(warehouse_tables_found) | length == 0
 
+    - name: wait for cdc to complete
+      pause:
+        minutes: 5
+
     - name: query warehouse table data
       community.postgresql.postgresql_query:
         db: warehouse
