Add test script

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -72,30 +72,8 @@ jobs:
       - name: install make
         run: sudo apt-get install -y make
 
-      - name: create molecule test scenario
-        run: make molecule create -- -s ${{ matrix.scenario }}
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          KIND_RELEASE: ${{ matrix.release }}
-          KIND_IMAGE: ${{ matrix.image }}
-
-      - name: publish test images
-        run: make images
-
-      - name: converge molecule test scenario
-        run: make molecule converge -- -s ${{ matrix.scenario }}
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          KIND_RELEASE: ${{ matrix.release }}
-          KIND_IMAGE: ${{ matrix.image }}
-
-      - name: restart strimzi connectors
-        run: make strimzi-connector-restart
-
-      - name: verify molecule test scenario
-        run: make molecule verify -- -s ${{ matrix.scenario }}
+      - name: run molecule tests
+        run: ./bin/test
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
