--- a/charts/dataplane/templates/metabase/ingress.yaml
+++ b/charts/dataplane/templates/metabase/ingress.yaml
@@ -1,7 +1,7 @@
 ---
 {{- if .Values.metabase.ingress.enabled -}}
 {{- $fullName := include "dataplane.metabase.fullname" . -}}
-{{- $secretName := include "dataplane.metabase.ingress.secretName" . -}}
+{{- $secretName := include "dataplane.metabase.ingress.secret.name" . -}}
 {{- $svcPort := .Values.metabase.service.port -}}
 {{- if and .Values.metabase.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.metabase.ingress.annotations "kubernetes.io/ingress.class") }}
