--- a/charts/dataplane/templates/metabase/secret.yaml
+++ b/charts/dataplane/templates/metabase/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dataplane.metabase.api.secret.name" . }}
+  name: {{ include "dataplane.metabase.setup.secret.name" . }}
 type: Opaque
 data:
-{{- ( include "dataplane.metabase.api.secret" . ) | indent 2 -}}
+{{- ( include "dataplane.metabase.setup.secret.data" . ) | indent 2 -}}
