--- a/charts/dataplane/templates/metabase/deployment.yaml
+++ b/charts/dataplane/templates/metabase/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - name: metabase-init
           securityContext:
             {{- toYaml .Values.metabase.initialSetup.securityContext | nindent 12 }}
-          image: "{{ .Values.initialSetup.image.repository }}:{{ .Values.initialSetup.image.tag }}"
+          image: "{{ .Values.metabase.initialSetup.image.repository }}:{{ .Values.metabase.initialSetup.image.tag }}"
           imagePullPolicy: {{ .Values.metabase.initialSetup.image.pullPolicy }}
           resources:
             requests:
@@ -43,17 +43,17 @@ spec:
               memory: 200Mi
           env:
             - name: "INIT_RETRIES"
-              value: {{ .Values.metabase.initialSetup.retries }}
+              value: "{{ .Values.metabase.initialSetup.retries }}"
             - name: "INIT_BACKOFF_SECONDS"
-              value: {{ .Values.metabase.initialSetup.backoffSeconds }}
+              value: "{{ .Values.metabase.initialSetup.backoffSeconds }}"
             - name: "MB_SITE_URL"
               value: "https://{{ .Values.metabase.ingress.hostName }}"
             - name: "MB_ADMIN_FIRSTNAME"
-              value: {{ .Values.metabase.initialSetup.user.firstName }}
+              value: "{{ .Values.metabase.initialSetup.user.firstName }}"
             - name: "MB_ADMIN_LASTNAME"
-              value: {{ .Values.metabase.initialSetup.user.lastName }}
+              value: "{{ .Values.metabase.initialSetup.user.lastName }}"
             - name: "MB_ADMIN_EMAIL"
-              value: {{ .Values.metabase.initialSetup.user.email }}
+              value: "{{ .Values.metabase.initialSetup.user.email }}"
             - name: "MB_ADMIN_PASSWORD"
               valueFrom:
                 secretKeyRef:
